# tick

./: .travis.yml  .travis_install_mac.sh  README.md  full_clean.sh  setup.py
examples/: plot_asynchronous_stochastic_solver.py  plot_glm_convergence_mutlithreaded_sparse.py  plot_hawkes_varying_baseline.py
tick/: CMakeLists.txt
tick/base/: __init__.py  timefunc.py
tick/base/array/tests/src/: CMakeLists.txt
tick/base/src/: time_func.cpp  time_func.h
tick/base/swig/: time_func.i
tick/base/tests/src/: CMakeLists.txt
tick/inference/: hawkes_sumexpkern_fixeddecay.py
tick/optim/model/: hawkes_fixed_sumexpkern_leastsq.py
tick/optim/model/src/: hawkes_fixed_sumexpkern_leastsq.cpp  hawkes_fixed_sumexpkern_leastsq.h
tick/optim/model/swig/: hawkes_fixed_sumexpkern_leastsq.i
tick/optim/model/tests/: hawkes_fixed_sumexpkern_leastsq_test.py  hawkes_utils.py
tick/optim/solver/: svrg.py
tick/optim/solver/src/: svrg.cpp  svrg.h
tick/optim/solver/tests/: svrg_test.py
tick/plot/: plot_hawkes.py
tick/simulation/: hawkes.py  hawkes_sumexp_kernels.py
tick/simulation/src/: CMakeLists.txt  hawkes.cpp  hawkes.h
tick/simulation/src/hawkes_baselines/: baseline.h  constant_baseline.cpp  constant_baseline.h  timefunction_baseline.cpp  (+1 more)
tick/simulation/swig/: hawkes.i
tick/simulation/tests/: hawkes_test.py
tick/simulation/tests/src/: CMakeLists.txt  hawkes_simulation.cpp
tools/docker/: build_wheels.sh  clean.sh  dims.sh
tools/docker/tick_manylinux1_x86_64/: Dockerfile
tools/docker/tick_ubuntu/: Dockerfile
tools/docker/tickenv/: Dockerfile
(+6 files in other folders)
